--- a/project-2-NEMURA-demo/project-2/src/Components/ScheduleComp.jsx/schedCard.css
+++ b/project-2-NEMURA-demo/project-2/src/Components/ScheduleComp.jsx/schedCard.css
@@ -1,23 +1,44 @@
-.sched-card {
+/* .sched-card {
   background-color: green;
   padding: 15px;
   margin: 20px;
   width: 400px;
   height: 150px;
   list-style: none;
-  /* display: flex; */
-  /* justify-content: space-between; */
+
   list-style: none;
+} */
+.sched-card {
+  background-color: rgb(36, 36, 40);
+  color: white;
+  opacity: 0.7;
+  /* padding: 15px; */
+  margin: 10px;
+  /* width: 300px; */
+  padding: 15px;
+  height: 150px;
+  /* flex-wrap: wrap; */
 }
 
-.sched-card > img {
+/* .sched-card > img {
   height: 100;
-}
-
+} */
+/* 
 .sched-card-container {
-  /* display: grid; */
+  
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 
   background-color: indigo;
+} */
+.schedule-container {
+  max-height: 500px;
+  overflow: scroll;
+  background-color: rgb(24, 28, 28);
+  /* border: 3px solid #f5f5f5; */
+  display: grid;
+  /* grid-template-columns: 25%25%25%25%; */
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  /* flex-wrap: wrap; */
+  margin: 50px;
 }
