--- a/project-2-NEMURA-demo/project-2/src/Components/cards/cards.css
+++ b/project-2-NEMURA-demo/project-2/src/Components/cards/cards.css
@@ -103,12 +103,11 @@
   padding: 5px 5px 0 5px;
   object-position: center;
   box-shadow: 5px 5px 15px 5px #1d1818;  */
-  
 }
 .cardpeople-img {
   max-height: 400px;
   border-radius: 10px;
-    /* box-shadow: 5px 5px 15px 5px #1d1818; */
+  /* box-shadow: 5px 5px 15px 5px #1d1818; */
 }
 
 .content {
@@ -116,7 +115,7 @@
   max-height: 450px;
   border-radius: 10px;
   margin: 0 15px;
-  color: #CCCC;
+  color: #cccc;
   /* padding: 20px; */
   background-color: #2c2b3c;
   padding: 5px 5px 0 5px;
@@ -131,17 +130,56 @@
 
 .cards-info {
   display: grid;
-    padding: 20px;
-    max-width: 250px;
-    background-color: #403f4c;
-    height: 400px;
-    align-self: center;
-    text-align: left;
-    object-position: center;
-    border-radius: 10px;
-    color: whitesmoke;
+  padding: 20px;
+  max-width: 250px;
+  background-color: #403f4c;
+  height: 400px;
+  align-self: center;
+  text-align: left;
+  object-position: center;
+  border-radius: 10px;
+  color: whitesmoke;
 }
 
 .info {
   align-self: center;
+}
+
+@media screen and (max-width: 500px) {
+  .cards-section {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    max-width: 90%;
+    /* grid-template-columns: repeat(4, 1fr); */
+    gap: 1rem;
+    background-color: #403f4c;
+    padding: 10px 0;
+    justify-content: center !important;
+    justify-items: flex-start;
+    /* width: 90%; */
+    /* align-self: flex-start; */
+    /* align-items: flex-start; */
+    align-items: center;
+    /* margin-bottom: 100px; cunku result olmadiginda alan bos kaliyor */
+
+    /* justify-content: center; */
+  }
+  .card {
+    min-height: 200px;
+    /* border: 1px solid black; */
+    border-radius: 10px;
+    /* margin: 0 5px; */
+    color: rgb(244, 227, 227);
+    /* padding: 20px; */
+    background-color: #2c2b3c;
+    /* padding: 5px 5px 0 5px; */
+    cursor: pointer;
+    object-position: center;
+    box-shadow: 5px 5px 15px 5px #1d1818;
+  }
+  .mul {
+    justify-content: center;
+    display: flex;
+    margin: 0;
+  }
 }
